fix(import): generalize preview and column mapping